--- a/shivtosh.html
+++ b/shivtosh.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> first live challange</title>
-    <link rel="stylesheet" href="shivtosh.css">
+    <link rel="stylesheet" href="./shivtosh.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 </head>
@@ -54,11 +54,11 @@ explicabo nostrum cupiditate, quos consectetur id asperiores sequi ex provident.
         <footer>
             <p id="name">[Student's name]</p>
             <p id="rollno">[University Roll_no]</p>
-            <p id="college">College name</p>
-            <p id="date">today's date</p>
+            <p id="college">[College name]</p>
+            <p id="date">[today's date]</p>
 
         </footer>
     </div>
-<script src="shivtosh.js"></script>
+<script src="./shivtosh.js"></script>
 </body>
 </html>
