--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
             <pre style="font-family: ;adipisicing">     PERFECT IMAGE
 FOR PERFECT WEBSITE 
 <p style="font-size:20px;text-align: center;">
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-Est nihil repudiandae nisi sapiente, molestias adipisci 
-explicabo nostrum cupiditate, quos consectetur id asperiores sequi ex provident.</p></pre>
-
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, quo eos sequi alias itaque temporibus et accusamus. 
+Suscipit, at! Cupiditate commodi ducimus magni nemo, rem quisquam corporis deleniti molestias porro, laboriosam odio laborum nostrum sit, laudantium tempora?
             <div id="skip-btn">
                 <div class="btns" id="pre"><button >&lt</button></div>
                 <div class="btns" id="next"><button >&gt</button></div>
