--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> first live challange</title>
+    <title> First Live Template</title>
     <link rel="stylesheet" href="./shivtosh.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -29,16 +29,19 @@
                 <div id="icons"><span class="material-icons">
                     search
                     </span>
+                    <span class="material-icons">
+                        shopping_cart
+                        </span>
                         <span class="material-icons">
                             menu
                             </span>
                 </div>
             </h1>
-            <pre style="font-family: ;adipisicing">     PERFECT IMAGE
-FOR PERFECT WEBSITE 
+            <pre style="text-align: center: ;">    PERFECT IMAGE FOR 
+     PERFECT WEBSITE 
 <p style="font-size:20px;text-align: center;">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, quo eos sequi alias itaque temporibus et accusamus. 
-Suscipit, at! Cupiditate commodi ducimus magni nemo, rem quisquam corporis deleniti molestias porro, laboriosam odio laborum nostrum sit, laudantium tempora?
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, quo eos sequi alias itaque temporibus et accusamus. Suscipit, at! Cupiditate commodi ducimus magni nemo, rem quisquam corporis deleniti molestias porro, laboriosam odio laborum nostrum sit, laudantium tempora?</p></pre>
+
             <div id="skip-btn">
                 <div class="btns" id="pre"><button >&lt</button></div>
                 <div class="btns" id="next"><button >&gt</button></div>
