--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <pre style="text-align: center: ;">    PERFECT IMAGE FOR 
      PERFECT WEBSITE 
 <p style="font-size:20px;text-align: center;">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, quo eos sequi alias itaque temporibus et accusamus. Suscipit, at! Cupiditate commodi ducimus magni nemo, rem quisquam corporis deleniti molestias porro, laboriosam odio laborum nostrum sit, laudantium tempora?</p></pre>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, 
+quo eos sequi alias itaque temporibus et accusamus. Suscipit, at! Cupiditate commodi ducimus magni nemo</p></pre>
 
             <div id="skip-btn">
                 <div class="btns" id="pre"><button >&lt</button></div>
