--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <pre style="text-align: center: ;">    PERFECT IMAGE FOR 
      PERFECT WEBSITE 
 <p style="font-size:20px;text-align: center;">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, 
+Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
+Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, <br>
 quo eos sequi alias itaque temporibus et accusamus. Suscipit, at! Cupiditate commodi ducimus magni nemo</p></pre>
 
             <div id="skip-btn">
