--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p style="font-size:20px;text-align: center;">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
 Dolores perferendis porro quam labore iste sed maiores non blanditiis quidem provident ut reiciendis, <br>
-quo eos sequi alias itaque temporibus et accusamus. Suscipit, at! Cupiditate commodi ducimus magni nemo</p></pre>
+</p></pre>
 
             <div id="skip-btn">
                 <div class="btns" id="pre"><button >&lt</button></div>
