--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
             <pre style="text-align: center: ;">    PERFECT IMAGE FOR 
      PERFECT WEBSITE 
 <p style="font-size:20px;text-align: center;">
-Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit.
-Dolores perferendis<br> porro quam labore iste sed maiores non blanditiis<br> quidem provident ut reiciendis, <br>
+Lorem ipsum dolor sit amet,consectetur adipisicing elit.
+Dolores perferendis porro quam labore iste sed maiores
+non blanditiis<br> quidem provident ut reiciendis,
 </p></pre>
 
             <div id="skip-btn">
