--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p style="font-size:20px;text-align: center;">
 Lorem ipsum dolor sit amet,consectetur adipisicing elit.
 Dolores perferendis porro quam labore iste sed maiores
-non blanditiis<br> quidem provident ut reiciendis,
+non blanditiis quidem provident ut reiciendis,
 </p></pre>
 
             <div id="skip-btn">
